--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
 {
-  /*"electron": {
-    "name": "MyApp",
-    "version": "0.1.0",
-    "description": "A really cool app.",
-    "height": 768,
-    "width": 1024,
-    "frame": true,
-    "title-bar-style": "hidden",
+  "electron": {
+    "name": "Ezmi",
+    "version": "1.0.0",
+    "description": "Like Trello, but for desktop",
+    "height": 900,
+    "width": 1440,
+    "frame": false,
+    "title-bar-style": "hidden-inset",
     "resizable": true,
     "builds": [{
       "platform": "win32",
       "arch": "ia32"
     }],
-  }*/
-  "scripts": {
-    "start": "meteor --settings settings.json"
+    "scripts": {
+      "start": "meteor --settings settings.json"
+    }
   }
 }
